# ArQana

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
arqana.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arqana/algorithms/: bernstein_vazarani.py  deutsch_jozsa.py
arqana/circuits/: deutsch_josza_circuit.py  deutsch_jozsa_circuit.py  oracles.py  qft.py
circuits/: deutsch_josza_circuit.py
notebooks/: test_circuits.ipynb
tests/algorithms/: test_bernstein_vazarani.py  test_deutsch_jozsa.py
tests/circuits/: test_deutsch_jozsa_circuit.py  test_oracles.py  test_qft.py
