[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["notebooks", "tests"]

[project]
name = "arqana"
version = "0.1.0"
description = "Modular quantum algorithm library"
authors = [{ name="Isha Janbakhsh", email="isha.j@hotmail.com" }]
dependencies = [
    "qiskit",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
